# RayTracing

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md
libs/: CMakeLists.txt
libs/libstub/: CMakeLists.txt
src/: AABB.h  BVH.h  CMakeLists.txt  Camera.h  Common.h  Geometry.h  HittableVec.h  IHittable.h  Image.h  Material.h  Ray.h  RayTracer.cpp  RayTracer.h  SpecifiedVec3.h  Texture.h  Vec.h  Vec3.die  Vec3.h  _vec3.h  main.cpp  types.h
